[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.6"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
